--- a/package.json
+++ b/package.json
@@ -8,16 +8,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
+    "@react-navigation/native": "^6.0.4",
     "expo": "~42.0.1",
-    "expo-font": "^9.2.1",
+    "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-screens": "~3.4.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1",
+    "react-navigation-header-buttons": "^9.0.0",
+    "react-navigation-material-bottom-tabs": "^2.3.4",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
