--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-navigation-header-buttons": "^9.0.0",
     "react-navigation-material-bottom-tabs": "^2.3.4",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.11.1"
+    "react-navigation-tabs": "^2.11.1",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
