--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/native": "^6.0.4",
     "expo": "~42.0.1",
+    "expo-file-system": "~11.1.3",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
     "expo-permissions": "^12.1.1",
+    "expo-sqlite": "^9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -30,7 +32,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.11.1",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
